bin/testsuite/tests/compiler/src/errors/compiler1236.swg
#global testerror "Err0401"

#test
{
    var x = 1
    #assert(true, x)
}